<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/primaryColor"
        android:clickable="false"
        android:elevation="32dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:collapseIcon="@drawable/ic_baseline_arrow_back_24"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/hidratese_thin_logo"
            android:contentDescription="Hidrate-se!"/>

    </androidx.appcompat.widget.Toolbar>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:padding="5dp"
        android:text="Olá Fulano!"
        android:textAlignment="center"
        android:textColor="@color/mainFontColor"
        android:textSize="34sp"
        tools:text="Olá Fulano!" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"

        android:text="@string/text1"
        android:textAlignment="center"
        android:textColor="@color/mainFontColor"
        android:textSize="20sp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/circular_determinative_pb"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:indeterminateOnly="false"
            android:progress="50"
            android:progressDrawable="@drawable/circular_pb"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:progress="50" />

        <TextView
            android:id="@+id/progress_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="50%"
            android:textColor="@color/primaryColor"
            android:textSize="34sp"
            app:layout_constraintBottom_toBottomOf="@+id/circular_determinative_pb"
            app:layout_constraintEnd_toEndOf="@+id/circular_determinative_pb"
            app:layout_constraintStart_toStartOf="@+id/circular_determinative_pb"
            app:layout_constraintTop_toTopOf="@+id/circular_determinative_pb"
            tools:text="50%" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="800ml de 1600ml consumidos"
            android:textAlignment="center"
            android:textColor="@color/primaryColor"
            android:textSize="20sp"
            tools:text="800ml de 1600ml consumidos" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/settingButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/settingColor"
                android:clickable="true"
                android:contentDescription="@string/text2"
                android:focusable="true"
                android:src="@drawable/ic_baseline_tune_24"
                app:backgroundTint="@color/settingColor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/roboto"
                android:padding="4dp"
                android:text="@string/text2"
                android:textColor="@color/mainFontColor"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="10dp">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/insertButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="45dp"
                android:backgroundTint="@color/primaryColor"
                android:clickable="true"
                android:contentDescription="@string/text3"
                android:focusable="true"
                android:src="@drawable/ic_baseline_add_24"
                app:backgroundTint="@color/primaryColor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/roboto"
                android:padding="4dp"
                android:text="@string/text3"
                android:textColor="@color/mainFontColor"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/reportButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/reportColor"
                android:clickable="true"
                android:contentDescription="@string/text4"
                android:focusable="true"
                android:src="@drawable/ic_baseline_insights_24"
                app:backgroundTint="@color/reportColor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/roboto"
                android:padding="4dp"
                android:text="@string/text4"
                android:textColor="@color/mainFontColor"
                android:textSize="12sp" />
        </LinearLayout>

    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:gravity="center_horizontal"
        android:text="@string/text5"
        android:textColor="@color/mainFontColor"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="80dp"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:width="276dp"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="Tenha sempre uma garrafa de água por perto."
            android:textColor="@color/mainFontColor"
            android:textSize="12sp"
            tools:text="Tenha sempre uma garrafa de água por perto." />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@android:color/transparent"
        tools:context=".MyActivity"
        tools:ignore="MergeRootFrame">

        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-3940256099942544/6300978111">
        </com.google.android.gms.ads.AdView>


        <!--        <com.google.android.gms.ads.AdView
                    android:id="@+id/adView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"

                    app:adSize="BANNER"
                    app:adUnitId="ca-app-pub-3508901910075386/8607180380" />-->

    </RelativeLayout>


</LinearLayout>